# alphalens

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini  versioneer.py
alphalens/: __init__.py  _version.py  performance.py  plotting.py  tears.py  utils.py
alphalens/examples/: event_study.ipynb  intraday_factor.ipynb
alphalens/tests/: test_performance.py  test_tears.py  test_utils.py
